--- a/index.html
+++ b/index.html
@@ -3,30 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Media</title>
+    <title>Document</title>
 </head>
-<header>
-    <h1><Strong>Chikaemerem Peter</Strong></h1>
-</header>
-<body>
-    <Main>
-        <a href="./table.html">Table</a>
-    <section id="picture">
-        <picture>
-       <source srcset="./img_20250103_153539.jpg" media="(min-width: 900px)"/>
-       <source srcset="./img_20250103_153539.jpg" media="(min-width: 600px)"/>
-       <source srcset="./img_20250103_153539.jpg" media="(min-width: 300px)"/>
-       <img src="./IMG_20250103_153539.jpg" alt="A young lady" width="400" height=>
-        </picture>
-    </section>
-    <section id="Audio">
-        <audio controls autoplay loop muted preload="auto" crossorigin="anonymous"> 
-            <source src="./Audio_assignment.m4a" type="audio/mpeg">
-            <source src="./Audio_assignment.m4a" type="audio/ogg">
-            Your browser does not support the audio tag
-        </audio>
-
-    </section>
-    </Main>
+<body style="background-color: lightblue;text-align: center; width: 100%; ">
+    <h1>
+    CHIKAEMEREM CYNTHIA PETER
+    </h1>
+    <p><strong>ALT/SOE/024/4913</strong></p>
+    <div class="container" style="display: flex; justify-content: center; align-items: center; gap: 10px; font-size: 20px;">
+<a href="./Asignment1/">Assignment 1</a>
+<a href="./Assignment2/">Assignment 2</a>
+    </div>
+        
 </body>
 </html>
