--- a/index.html
+++ b/index.html
@@ -3,17 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assignment 001</title>
 </head>
-<body style="background-color: lightblue;text-align: center; width: 100%; ">
-    <h1>
-    CHIKAEMEREM CYNTHIA PETER
-    </h1>
-    <p><strong>ALT/SOE/024/4913</strong></p>
-    <div class="container" style="display: flex; justify-content: center; align-items: center; gap: 10px; font-size: 20px;">
-<a href="./Asignment1/">Assignment 1</a>
-<a href="./Assignment2/">Assignment 2</a>
-    </div>
-        
+<body>
+    <header>
+        <nav aria-labelledby="primary navigation">
+            <ul>
+                <li>
+            <a href="#Bio-data"> Bio-data</a>
+        </li>
+           <li>
+            <a href="#Reasonforjoiningtheprogram">Reason for joining the program</a>
+        </li> 
+        <li>
+            <a href="#Goalsfortheprogram">Goals for the program</a>
+        </li>
+        <li>
+            <a href="./Form.html">Form</a>
+        </li>
+            </ul>
+        </nav>
+    </header>
+    <section id="Bio-data">
+ <h3>BIO DATA</h3>
+ <img src="./1733230855328.jpg" alt="picture of me" width="100" height="180">
+ <P>
+    <strong>NAME:</strong> Chikaemerem Peter <br>
+    <strong>STUDENT ID:</strong> ALT/SOE/024/4913 <br>
+    <strong>TRACK:</strong> Cloud Enginerring
+ </P>   
+ <hr>
+    </section>
+ <section id="Reasonforjoiningtheprogram">
+ <h3><strong>Reaon Why I Joined The Program</strong></h3>
+ <p>From a young age, I have always been fascinated with technology and its potential to revolutionize the world we live in. Throughout my life, I have always been on the lookout for ways to challenge myself in tech and continuously learn new skills. For over 2 years i have been trying to transition into tech but as a working mum, its has been very difficult. I decided to join this program because after listening to various testimonials and accomplishment of aluminis I believe that Alt School Africa is just the right place for me to begin this journey, its self paced learning program will give me the oppotunity to learn at my own pace but at a good pace. Also, its vibrant community of learners and alumni will both inspire and encourage me to archieve my goals.
+</p>
+ </section>
+<hr>
+<section id="Goalsfortheprogram">
+<h3><strong>Goals For SOE</strong></h3>
+    <ul>
+        <li>Master the <strong>BASICS</strong></li>
+        <li>Complete assignment and bulid mini projects</li>
+        <li>Develop a learning routine</li>
+        <li>Engage with my circle and learning peers regularly</li>
+        <li>Complete the program and graduate with my peers</li>
+    </ul>
+</section>
+<hr>
+<footer>
+    <p>
+        <a href="#">Back to top</a>
+        <br><br>
+        Address:35 Americana Street Oribanwa, Ibeju-lekki Lagos
+    </p>
+
+&lt;&lt;&lt;&copy;Chikaemerem Peter&gt;&gt;&gt;
+</footer>
 </body>
 </html>
